# ssh-break-glass

./: .gitignore  CMakeLists.txt  Containerfile  Pipfile  README.md
cmake/: FindNSS.cmake  FindPAM.cmake  formatters.cmake  macros.cmake  variables.cmake
examples/: README.md  sshd.yaml  vault.yaml
examples/roles/: admin.hcl  bootstrap.sh  users.hcl
examples/sshd/: Containerfile
examples/sshd/etc/authselect/custom/ssh-break-glass/: nsswitch.conf  password-auth
examples/sshd/etc/pam.d/: brkgl2s
examples/sshd/etc/sysconfig/: sshd
examples/sshd/etc/systemd/: journald.conf
nss/: CMakeLists.txt  nss_brkgl2s.c
pam/: CMakeLists.txt  pam_brkgl2s.c
